Stop duplicates WebUSB notification

This change adds a list of notifications that are currently displayed and checks
that list for duplicates before displaying a new notification.

Bug: 789362
Change-Id: I1f8025dbb237da35b088de5bd6f21e80a1bbec52
Reviewed-on: https://chromium-review.googlesource.com/c/1373436
Commit-Queue: James Hollyer <jameshollyer@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619541}
Former-commit-id: d7cf3101dcae06f6d27524f055cd75de20c7fa33